<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mycompany</groupId>
    <artifactId>myapplication</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.github.ozkanpakdil</groupId>
            <artifactId>jd2xx</artifactId>
            <version>2.0.8.20</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>24</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.5.18</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>1.0.26</version>
                <configuration>
                    <mainClass>org.example.App</mainClass>
                    <resourcesList>
                        <list>/jni/win/x86_64/jd2xx.dll</list>
                        <list>/jni/win/x86_64/ftd2xx.dll</list>
                    </resourcesList>
                    <nativeImageArgs>
                        <arg>--initialize-at-build-time=io.github.ozkanpakdil.JD2XX</arg>
                        <arg>-H:+JNI</arg>
                        <arg>-H:+PrintClassInitialization</arg>
                        <arg>-H:TraceClassInitialization=true</arg>
                        <arg>--enable-native-access=ALL-UNNAMED</arg>
                        <arg>-H:+ReportExceptionStackTraces</arg>
                        <arg>-H:IncludeResources=/jni/.*</arg>
                        <arg>-H:+AddAllCharsets</arg>
                    </nativeImageArgs>
                    <jniList>
                        <list>io.github.ozkanpakdil.JD2XX</list>
                    </jniList>
                    <bundlesList>
                        <list>jni.win.x86_64</list>
                    </bundlesList>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>org.example.App</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>gluon-releases</id>
            <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
        </repository>
    </repositories>
</project>